<resources>
    <!-- App -->
    <string name="app_name">Reflect</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open_description">open drawer</string>
    <string name="navigation_drawer_close_description">close drawer</string>

    <!-- First Time Setup Fragment SMS -->
    <string name="fragment_first_time_setup_sms_set_default_prompt">Use Reflect as your default SMS app?</string>

    <string name="fragment_first_time_setup_sms_is_default_prompt">Reflect is your default SMS app</string>
    <string name="fragment_first_time_setup_sms_is_default_next_button">Next</string>

    <string name="fragment_first_time_setup_sms_no_telephony_prompt">SMS is not available on your phone, as a result some features of Reflect will not be available</string>
    <string name="fragment_first_time_setup_sms_no_telephony_next_button">Next</string>

    <!-- First Time Setup Fragment Navigation Buttons -->
    <string name="fragment_first_time_setup_navigation_buttons_yes">Yes</string>
    <string name="fragment_first_time_setup_navigation_buttons_no">No</string>
</resources>
